--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "styled-components": "^5.3.5"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.0",
     "plop": "^3.1.0",
     "prettier": "2.6.2",
